--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 						</ul>
 					</nav>
 				</td>
-				<td colspan="2" 
-					<h2> Raffi Ahmad kembali mengunggah foto buah hatinya, Rayyanza Malik Ahmad di Instagram pribadinya. Kali ini Raffi Ahmad mengunggah bocah<br>
-                         yang juga disapa Cipung itu menggunakan jas hitam, dasi, dan kopiah hitam.Sedangkan background fotonya berlatar belakang bendera merah<br>
-                        putih. Penampilannya itu mirip orang yang ingin mendaftar sebagai calon presiden. Hal itu tidak dipungkiri Raffi Ahmad. Bahkan di caption<br>
-                        fotonya cipung mirip calon presiden. Namun Cipung dipastikan jadi presiden bukan untuk negaranya melainkan untuk perusahaannya Raffi Ahmad.</h2>
+				<td colspan="3" 
+					<h2> Raffi Ahmad kembali mengunggah foto buah hatinya, Rayyanza Malik Ahmad di Instagram pribadinya. Kali ini Raffi Ahmad mengunggah bocah yang juga disapa Cipung itu<br>
+                        		menggunakan jas hitam, dasi, dan kopiah hitam.Sedangkan background fotonya berlatar belakang bendera merah putih. Penampilannya itu mirip orang yang ingin mendaftar<br>
+                       			sebagai calon presiden. Hal itu tidak dipungkiri Raffi Ahmad. Bahkan di caption fotonya cipung mirip calon presiden. Namun Cipung dipastikan jadi presiden bukan untuk<br>
+					negaranya melainkan untuk perusahaannya Raffi Ahmad.</h2>
 				</td>
 			</tr>
 			<tr>
